Fixing a glitch on firefox that would make the hidden header border show up

--- a/src/main/webapp/catSortable.css
+++ b/src/main/webapp/catSortable.css
@@ -34,6 +34,15 @@ td.categoryJobsColumn {
 	background-color: white;
 }
 
-.categoryJobs tr, .categoryJobs td, .categoryJobs table {
+ .categoryJobs table {
+ 	border: none;
+ }
+ 
+ .hidden-header {
+ 	border: none;
+ }
+
+.categoryJobs tr, .categoryJobs td {
 	border-color: #eee;
 }
+
